# Kaolalabot

./: .gitignore  ARCHITECTURE_OPTIMIZATION_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXEC_TOOL_TEST_REPORT.md  LICENSE  OPTIMIZATION_REPORT_20260304.md  QUICKSTART.md  README.md  SECURITY.md  config.example.json  config.json  pyproject.toml  requirements-backend.txt  run_server.bat
docs/: INDEX.md  LEARNING_GUIDE.md  MASCOT.md  MASCOT_ADD_REPORT.md  SPEC.md  design-guide.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
kaolalabot/: __init__.py  __main__.py  config.py  server.py  server_config.py
kaolalabot/_deprecated/: README.md  graph_handler.py
kaolalabot/agent/: README.md  __init__.py  context.py  intent_classifier.py  loop.py  native_commands.py  suggestion_engine.py
kaolalabot/api/: __init__.py  (+1 more)
scripts/: README.md  check_config.py  check_deps.py  check_model.py  check_model2.py  debug_tools.py  debug_voice.py  diagnose_voice.py  download_model.py  download_model2.py  fix_model.py  organize_scripts.py  run_voice.py  test_model.py
sessions/: cli_c1.jsonl  cli_local.jsonl  feishu_ou_1.jsonl
tests/: README.md  quick_test_exec.py  run_test.py  simple_test.py  test_agent_loop_browser_fallback.py  test_agent_loop_commands.py  test_agent_loop_react.py  test_clawhub_service.py  test_dingtalk_channel.py  test_exec_tool.py  test_exec_tool_openclaw.py  test_gateway_auth.py  test_heartbeat_service.py  test_imports.py  test_mcp_service.py  test_memory_import_chain.py  test_memory_v2.py  test_message_bus.py  test_modules.py  test_native_command_router.py  test_native_commands.py  test_openclaw_browser_tool.py  test_openclaw_local_service.py  test_playwright_tool.py  test_run.py  test_run2.py  test_run3.py  test_scheduler_cron.py  test_scheduler_service.py  test_web_channel.py
workspace/: AGENTS.md  USER.md  import_probe.py  integration_probe.py  perf_baseline.txt  perf_probe.py  route_probe.py
(+258 files in other folders)
