[project]
name = "kaolalabot"
version = "1.0.0"
description = "A powerful AI agent framework with multi-channel support and advanced AI capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "kaolalabot Team"}
]
keywords = ["ai", "agent", "chatbot", "feishu", "lark", "rag", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-socketio[client]>=5.10.0",
    "python-socketio[server]>=5.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "litellm>=1.0.0",
    "json-repair>=0.7.0",
    "lark-oapi>=1.0.0",
    "numpy>=1.26.0",
    "xxhash>=3.4.1",
    "psutil>=5.9.0",
    "sounddevice>=0.4.0",
    "webrtcvad>=2.0.10",
    "faster-whisper>=0.10.0",
    "edge-tts>=6.1.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "playwright>=1.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
kaolalabot = "kaolalabot.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kaolalabot"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
